--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "cra-template-qbdh",
-  "version": "1.0.0",
-  "keywords": [
-    "react",
-    "create-react-app",
-    "template"
-  ],
-  "description": "QianBaiDuHai的CRA模版",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/qianbaiduhai/cra-template-qbdh.git"
-  },
-  "author": "QianBaiDuHai",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/qianbaiduhai/cra-template-qbdh/issues"
-  },
-  "files": [
-    "template",
-    "template.json"
-  ]
+    "name": "cra-template-qbdh",
+    "version": "1.0.1",
+    "main": "template.json",
+    "keywords": [
+        "react",
+        "create-react-app",
+        "template"
+    ],
+    "description": "QianBaiDuHai的CRA模版",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/qianbaiduhai/cra-template-qbdh.git"
+    },
+    "author": "QianBaiDuHai",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/qianbaiduhai/cra-template-qbdh/issues"
+    },
+    "files": [
+        "template",
+        "template.json"
+    ]
 }
