feat: 补充说明内容

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "files": [
         "template",
         "template.json"
-    ]
+    ],
+    "dependencies": {
+        "prettier": "^2.0.5"
+    }
 }
